--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -45,5 +45,5 @@
             </div>
         </li>
     </ul>
-    <div class="tooltip-error" ng-show="isvisibleTooltip()">{{ctrl.errorMessage}}</div>
+    <div class="tooltip-error disable-animations"  ng-show="isvisibleTooltip()">{{ctrl.errorMessage}}</div>
 </div>   
