--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
@@ -1,4 +1,4 @@
-﻿<div class="dropdown" name="dropdown" ng-model="ctrl.options.lastselectedvalue" ng-mouseenter=" ctrl.showtooltip(); " ng-mouseleave="ctrl.hidetooltip()">
+﻿<div class="dropdown" name="dropdown" ng-model="ctrl.options.lastselectedvalue" ng-mouseenter="ctrl.showtooltip(); " ng-mouseleave="ctrl.hidetooltip()">
     <button class="btn btn-default dropdown-toggle" ng-class="isvalidcomp()" style="width:100%;position:relative" type="button" id="dropdownMenuRule" data-toggle="dropdown" aria-expanded="true">
         <span style="float: left; margin: 0px; ">{{ctrl.getSelectText()}}</span>
         <span style="position:absolute;top:13px;right:5px" class="caret"></span>
@@ -11,9 +11,8 @@
             </div>
         </li>
     </ul>
-    <div class="tooltip-error" ng-show="isvisibleTooltip()">{{ctrl.errorMessage}}</div>
+
+    <div class="tooltip-error disable-animations" ng-show="isvisibleTooltip()">{{ctrl.errorMessage}} </div>
 </div>
-
-
 
 
