added angular messages lib
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22225

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
@@ -2,7 +2,7 @@
     <div class="panel panel-primary panel-over-color">
         <div class="panel-body">
             <div class="am-collapse" ng-show="inputSectionVisible">
-                <form name="filterForm" novalidate>
+                <vr-form name="filterForm" novalidate>
                     <div class="row style-row">
                         <div class="col-lg-2 style-col">
                             <label class="control-label">Date Period:</label>
@@ -20,8 +20,9 @@
                                          entityname="" type="standard" options="optionTopCounts" data-onselectionchange="updateCharts"></vr-dropdown>
                         </div>
                     </div>
+                </vr-form>
             </div>
-            </form>
+
             <div class="row ">
                 <div class="col-lg-12 col-no-padding ">
                     <div class="action-bar">
