--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -1,81 +1,86 @@
 ﻿
-<div class="panel panel-primary panel-over-color">
-    <div class="panel-body">
-        <vr-form name="formFilter" ng-init="formState = {gettingDataDisabled: false}">
-            <div class="am-collapse" ng-hide="filterSectionCollapsed">
-                <div class="row style-row">
-                    <div class="col-lg-1 style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                        <label class="control-label">From:</label>
-                        <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                            <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
-                        </div>
+<vr-panel>
+    <vr-form name="formFilter">
+        <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
+            <vr-row>
+                <vr-columns>
+                    <label class="control-label">From:</label>
+                    <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                        <input size="10" class="form-control" ng-model="fromDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
                     </div>
-                    <div class="col-lg-1  style-col" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                        <label class="control-label">To:</label>
-                        <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
-                            <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
-                        </div>
+                </vr-columns>
+                <vr-columns>
+                    <label class="control-label">To:</label>
+                    <div style="display:inline-block;position:relative;width:100%" ng-mouseenter="showtd=true" ng-mouseleave="showtd=false">
+                        <input size="10" class="form-control" ng-model="toDate" data-autoclose="1" placeholder="Date" bs-datepicker type="text">
                     </div>
-                </div>
-            </div>
+                </vr-columns>
+            </vr-row>
+        </div>
 
 
-            <div class="row ">
-                <div class="col-lg-12 col-no-padding ">
-                    {{gettingDataDisabled}}
-                    <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-                        <vr-button type="Search" data-onclick="getData" isasynchronous="true" isdisabled="formState.gettingDataDisabled"></vr-button>
-                        <vr-button type="Reset"></vr-button>
-                    </vr-actionbar>
-                </div>
-            </div>
+        <vr-row removeline="true">
+            <vr-columns colnum="12">
+                <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                    <vr-button type="Search" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
+                    <vr-button type="Reset"></vr-button>
+                </vr-actionbar>
+            </vr-columns>
+        </vr-row>
 
-            <div ng-show="showResult">
-                <div class="row style-row">
-                    <div class="col-lg-5 style-col">
-                        <vr-chart data-on-ready="chartSelectedMeasureReady" style="display:inline-block"></vr-chart>
-                    </div>
-                    <div class="col-lg-5 style-col">
-                        <vr-chart data-on-ready="chartSelectedEntityReady" style="display:inline-block"></vr-chart>
-                    </div>
-                </div>
+        <div ng-show="showResult">
+            <vr-row>
+                <vr-columns colnum="5">
+                    <vr-chart data-on-ready="chartSelectedMeasureReady" style="display:inline-block"></vr-chart>
+                </vr-columns>
+                <vr-columns colnum="5">
+                    <vr-chart data-on-ready="chartSelectedEntityReady" style="display:inline-block"></vr-chart>
+                </vr-columns>
+            </vr-row>
 
-                <div class="row style-row" aria-disabled="formState.gettingDataDisabled">
-                    <div class="col-lg-2 style-col">
+            <div ng-class="{'disabledbutton': formState.gettingDataDisabled}">
+                <vr-row>
+                    <vr-columns colnum="2">
                         <label class="control-label" style="padding-top:3px">
                             Items per Page:
                         </label>
-                    </div><input type="text" ng-disabled="gettingDataDisabled" />test{{formState.gettingDataDisabled}}
-                    <div class="col-lg-1 style-col">
-                        <vr-dropdown datatextfield="description" datavaluefield="value" ng-disabled="formState.gettingDataDisabled"
+                    </vr-columns>
+                    <vr-columns>
+                        <vr-dropdown datatextfield="description" datavaluefield="value"
                                      entityname=" " type=" standard" options="optionsTopCount" data-onselectionchange="pageChanged"></vr-dropdown>
-                    </div>
+                    </vr-columns>
 
-                    <div class="col-lg-5 style-col">
-                        <pagination total-items="totalDataCount" ng-model="currentPage" max-size="5" class="pagination-sm" num-pages="numberOfPages" ng-disabled="formState.gettingDataDisabled"
+                    <vr-columns colnum="5">
+                        <pagination total-items="totalDataCount" ng-model="currentPage" max-size="5" class="pagination-sm" num-pages="numberOfPages"
                                     items-per-page="optionsTopCount.lastselectedvalue.value" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
-                    </div>
-                </div>
-
-                <div class="row style-row">
-                    <div class="col-lg-12 col-md-12   style-col">
-                        <div id="custom" class="gridroute" ui-grid="gridOptionsAllMeasures" ui-grid-auto-resize ng-style="getGridHeight(gridOptionsAllMeasures)"></div>
-                    </div>
-                    <div style="float:right;margin-right:25px">
-                        <label class="control-label" style="padding-top:6px">
-                            Page {{currentPage}} of {{numberOfPages}}
-                        </label>
-                    </div>
-                </div>
+                    </vr-columns>
+                </vr-row>
             </div>
-        </vr-form>
-    </div>
-</div>
-<style>
-    .pagination{
-        margin:0px !important;
-    }
-</style>
+
+
+            <vr-row>
+                <vr-columns colnum="12">
+                    <div id="custom" class="gridroute" ui-grid="gridOptionsAllMeasures" ui-grid-auto-resize ng-style="getGridHeight(gridOptionsAllMeasures)"></div>
+                </vr-columns>
+                <div style="float:right;margin-right:25px">
+                    <label class="control-label" style="padding-top:6px">
+                        Page {{currentPage}} of {{numberOfPages}}
+                    </label>
+                </div>
+            </vr-row>
+        </div>
+    </vr-form>
+</vr-panel>
+    <style>
+        .pagination {
+            margin: 0px !important;
+        }
+
+        .disabledbutton {
+            pointer-events: none;
+            opacity: 0.1;
+        }
+    </style>
 
 
 
