--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -20,7 +20,8 @@
                                         </div>
                                         <div class="col-lg-2 style-col">
                                             <vr-dropdown datatextfield="name" datavaluefield="objectType"
-                                                         entityname="" type="standard" onselectionchange="onchangeRouteRule" options="optionsRouteType"></vr-dropdown>
+                                                         type="standard" onselectionchange="onchangeRouteRule" options="optionsRouteType"></vr-dropdown>
+
                                         </div>
                                     </div>
                                     <div class="row style-row">
@@ -72,10 +73,9 @@
                                             <textarea class="form-control" ng-model="Reason" />
                                         </div>
                                     </div>
-
                                 </div>
                             </form>
-</div>
+                        </div>
                     </div>
                 </div>
 
