--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -51,6 +51,7 @@
 
                 </div>
 
+                <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="test()">test Modal</button>
             </div>
         </div>
     </div>
