Add validation messages
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22235

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -45,5 +45,10 @@
             </div>
         </li>
     </ul>
-    <div class="tooltip-error disable-animations"  ng-show="isvisibleTooltip()">{{ctrl.errorMessage}}</div>
+    <div  class="tooltip-error disable-animations " ng-show="isvisibleTooltip()" ng-messages="getErrorObject()" >
+        <div ng-message="requiredarray">{{ ctrl.ValidationMessagesEnum.required }}</div>
+        <div ng-message="requiredvalue">{{ ctrl.ValidationMessagesEnum.required }}</div>
+        <div ng-message="customvalidation">{{ customMessage }}</div>
+    </div>
+
 </div>   
