--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-standard.html
@@ -3,7 +3,7 @@
         <span style="float: left; margin: 0px; ">{{ctrl.getSelectText()}}</span>
         <span style="position:absolute;top:13px;right:5px" class="caret"></span>
     </button>
-    <ul class="dropdown-menu dropdown-menu-custom" role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);">
+    <ul class="dropdown-menu dropdown-menu-custom" role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);" ng-class="ctrl.getUlClass()">
         <li role="presentation">
             <div ng-repeat="c in ctrl.options.datasource" class="mark-select " ng-click="selectValue($event, c);"
                  ng-mouseenter="ctrl.muteaction($event);" style="display: block;padding:2px; margin:2px; white-space: normal;">
@@ -11,8 +11,11 @@
             </div>
         </li>
     </ul>
-
-    <div class="tooltip-error disable-animations" ng-show="isvisibleTooltip()">{{ctrl.errorMessage}} </div>
+    <div class="tooltip-error disable-animations " ng-show="isvisibleTooltip()" ng-messages="getErrorObject()">
+        <div ng-message="requiredarray">{{ ctrl.ValidationMessagesEnum.required }}</div>
+        <div ng-message="requiredvalue">{{ ctrl.ValidationMessagesEnum.required }}</div>
+        <div ng-message="customvalidation">{{ customMessage }}</div>
+    </div>
 </div>
 
 
