--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -22,7 +22,7 @@ textarea.form-control {
 .modal-x-lg {
     width: 97%;
 }
-/*.modal .dropdown-menu {
+.modal .dropdown-menu {
     position: fixed;
     z-index: 1000;
     min-width: 160px;
@@ -38,7 +38,25 @@ textarea.form-control {
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
     top:inherit;
     left:inherit;
-}*/
+}
+.modal .menu-right{
+    position: absolute;
+    z-index: 1000;
+    min-width: 160px;
+    padding: 5px 0px;
+    margin: 2px 0px 0px;
+    font-size: 14px;
+    text-align: left;
+    list-style: outside none none;
+    background-color: #FFF;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
+    left: inherit;
+    right: -6px;
+    top: 100%;
+}
 /* end bootstrap overide */  
 .disable-animations.ng-animate{
     -webkit-transition: none !important;
