--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate2.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/RouteOverrideTemplate2.html
@@ -5,7 +5,7 @@
                      entityname="Suppliers"></vr-dropdown>
 
     </div>
-    <div class="col-lg-3  style-col " ng-class="optionsSuppliers.selectedvalues.length == 0 ? 'emptycol':''">
+    <div class="col-lg-3  style-col " style="max-height:250px;overflow:auto" ng-class="optionsSuppliers.selectedvalues.length == 0 ? 'emptycol':''">
         <ul class="list-group" style="margin:0px" ng-show="optionsSuppliers.selectedvalues.length > 0">
             <li class="list-group-item list-custom" style="margin:1px;border:0px">
                 <div style="display:inline-block;padding-left:25px">Supplier</div>
