--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -8,7 +8,7 @@
                 <h4 class="modal-title" ng-bind="title"></h4>
             </div>
 
-            <div class="modal-body" style="max-height:650px;overflow-y:auto">
+            <div class="modal-body">
                 <div>
                     <div class="panel panel-primary panel-over-color">
                         <div class="panel-body">
@@ -60,11 +60,11 @@
                                     </div>
 
 
-                                    <div class="row style-row" ng-show="optionsRouteType.lastselectedvalue.name != 'Block Route' && optionsRouteType.lastselectedvalue.url!='' " style="min-height:200px">
+                                    <div class="row style-row" ng-show="optionsRouteType.lastselectedvalue.name != 'Block Route' && optionsRouteType.lastselectedvalue.url!='' "  >
                                         <div class="col-lg-12  style-col">
                                             <h4>{{optionsRouteType.lastselectedvalue.name}} Details:</h4>
-                                        </div>
-                                        <div ng-include src="optionsRouteType.lastselectedvalue.url">
+                                        </div>                                      
+                                        <div  style="min-height:70px" ng-include src="optionsRouteType.lastselectedvalue.url">
 
                                         </div>
                                     </div>
@@ -89,15 +89,12 @@
 
                         </div>
                         <div class="btn-group action-bar-right">
-                            <!--<button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="$hide()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>-->
+                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="$hide()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                             <button ng-disabled="validateForm()" style="border-bottom-color: transparent; border-color: transparent; border-radius: 0px; background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="saveRule();">Save<span ng-init=" issaving = false" ng-show="issaving==false" style="padding-left:4px" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span><img src="~/../images/loader-mask.gif" style="width:17px" ng-show="issaving" /></button>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
-            </div>
+            </div>            
         </div>
     </div>
 </div>
