Dropdown Custom validation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22249

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-dropdown-ondemand.html
@@ -48,7 +48,7 @@
     <div  class="tooltip-error disable-animations " ng-show="isvisibleTooltip()" ng-messages="getErrorObject()" >
         <div ng-message="requiredarray">{{ ctrl.ValidationMessagesEnum.required }}</div>
         <div ng-message="requiredvalue">{{ ctrl.ValidationMessagesEnum.required }}</div>
-        <div ng-message="customvalidation">{{ customMessage }}</div>
+        <div ng-message="customvalidation">{{ ctrl.customMessage }}</div>
     </div>
 
 </div>   
